[metadata]
name = ccc
version = attr: ccc.__version__
description = Cool Code Counter
long_description = file: README.md

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    setuptools
    pathspec

[options.entry_points]
console_scripts =
    ccc = ccc.cli:main

[options.package_data]
* = languages.json
